# Helios-Protocol

./: .gitattributes  .gitignore  PROGRESS.md  README.md  app.html  csprclick.js  cycle-fix.js  deposit-fix.js  deposit.js  index.html  leaderboard.json  reputation.json
.github/workflows/: build-contract.yml  casper-keygen.yml  deploy-testnet.yml
agent/: helios-core.mjs  install-reputation.mjs  leaderboard.mjs  mcp-server.mjs  package-lock.json  package.json  record-decision.mjs  snapshot.mjs  swarm.mjs  x402.mjs
contracts/: .gitignore  Cargo.toml  Odra.toml  README.md  build.rs  casper-test.env.sample
contracts/.cargo/: config.toml
contracts/bins/: build_contract.rs  build_schema.rs
contracts/src/: lib.rs
