[package]
name = "helios-vault"
version = "0.1.0"
edition = "2021"
description = "HeliosVault — on-chain RWA treasury for Helios Protocol on Casper"

[dependencies]
odra = { version = "2.7.2", default-features = false }
odra-casper-livenet-env = { version = "2.7.2", optional = true }

[dev-dependencies]
odra-test = { version = "2.7.2", default-features = false }

[build-dependencies]
odra-build = { version = "2.7.2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.7.2", default-features = false }

[features]
default = []
# Enables the Casper Livenet backend used by the deploy binary below.
livenet = ["dep:odra-casper-livenet-env"]

# Standard Odra build helpers driven by `cargo odra build` / `cargo odra schema`.
[[bin]]
name = "helios_vault_build_contract"
path = "bins/build_contract.rs"
test = false

[[bin]]
name = "helios_vault_build_schema"
path = "bins/build_schema.rs"
test = false

# Deploy/interaction script for a live network (Testnet).
[[bin]]
name = "helios_vault_on_livenet"
path = "src/bin/helios_vault_on_livenet.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true
